--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
     "next": "10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1"
+  },
+  "devDependencies": {
+    "axios": "^0.21.0",
+    "crypto-js": "^4.0.0"
   }
 }
