--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.0",
+    "crypto-js": "^4.0.0",
     "next": "10.0.3",
     "pino": "^6.8.0",
-    "pino-logflare": "^0.3.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "axios": "^0.21.0",
-    "crypto-js": "^4.0.0"
+    "uuid": "^8.3.2"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
